--- a/_posts/2019-07-07-Mount.md
+++ b/_posts/2019-07-07-Mount.md
@@ -1,13 +1,13 @@
 ---
-layout:		post
-title:		Mount
-subtitle:	挂载远程服务器，及权限总结
-date:		2019-07-06
-author:		Ripper-S
-header-img:	img/post-bg-2015.jpg
-catalog:	true
-tags:
-    - LINUX
+layout:		post					# 使用的布局
+title:		Mount					# 标题
+subtitle:	Learning Notes of Mount Server		# 副标题
+date:		2019-07-06				# 时间
+author:		Ripper-S				# 作者
+header-img:	img/book-coffee.jpeg			# 文章标题背景图
+catalog:	true					# 是否归档
+tags:							# 标签
+	- LINUX
 ---
 
 
