--- a/_posts/2019-07-07-Mount.md
+++ b/_posts/2019-07-07-Mount.md
@@ -7,7 +7,7 @@ author:		Ripper-S				# 作者
 header-img:	img/book-coffee.jpeg			# 文章标题背景图
 catalog:	true					# 是否归档
 tags:							# 标签
-    - LINUX
+    - Linux
 ---
 
 
