--- a/_posts/2019-07-07-Mount.md
+++ b/_posts/2019-07-07-Mount.md
@@ -16,7 +16,7 @@ tags:							# 标签
 
 #	正文
 ```
-sudo mount -t cifs //172.16.1.106/bu2pd2-Data/share /home/chenshu/swap-jenkins/ -o username=bu2pd2,password=bu2pd2,vers=1.0,dir_mode=077,file_mode=077,uid=1000,gid=1000<br>
+sudo mount -t cifs //172.16.1.106/bu2pd2-Data/share /home/S/swap-jenkins/ -o username=bu2pd2,password=bu2pd2,vers=1.0,dir_mode=077,file_mode=077,uid=1000,gid=1000<br>
 dir_mode,file_mode=077意味着主用户和组用户都是rwx权限
 ```
 uid是用户id号，gid是组id号；用 id xxx 查看。<br>
@@ -26,7 +26,7 @@ uid是用户id号，gid是组id号；用 id xxx 查看。<br>
 ```
 vim /etc/fstab
 ## 加上下面这句
-//172.16.1.106/bu2pd2-Data/share /home/chenshu/swap-jenkins/ cifs username=bu2pd2,password=bu2pd2,vers=1.0,dir_mode=077,file_mode=077,uid=1000,gid=1000
+//172.16.1.106/bu2pd2-Data/share /home/S/swap-jenkins/ cifs username=bu2pd2,password=bu2pd2,vers=1.0,dir_mode=077,file_mode=077,uid=1000,gid=1000
 ```
 
 已经挂载了之后，如果我们还想修改文件的权限呢？如下：
