--- a/_posts/2019-08-08-Makefile.md
+++ b/_posts/2019-08-08-Makefile.md
@@ -30,3 +30,37 @@ clean:
 $@：目标的完整名称
 $^：所有依赖的文件
 $<：第一个依赖的文件
+
+
+
+当然，常规写法中，我们也可以指定一些变量，并通过正则的手段，简化一些操作。
+我们可以将多个.c文件名保存在SRCS中，再定义另一个变量OBJS保存.o文件名。
+```
+SRCS=fun1.c fun2.c main.c
+OBJS=$(SRCS:.c=.o)
+```
+还有一些其他常用的预定义变量：
+```
+CC			编译器类型
+CFLAGS		编译选项
+LDFLAGS		额外链接库
+EXEC/APP	应用程序名
+
+
+Example:
+```
+# makefile example
+CC=gcc
+CFLAGS = -Wall -O2
+CFLAGS += -I./include
+LFLAGS = -lpthread ./lib/libnet.a ./lib/libpcap.a
+
+SRCS=fun1.c fun2.c main.c
+OBJS=$(SRCS:.c=.o)
+EXEC=test
+
+all:$(OBJS)
+	$(CC) $(CFLAGS) $(OBJS) -o $(EXEC) $(LFLAGS)
+clean:
+	rm -rf $(EXEC) $(OBJS)
+```
