--- a/_posts/2020-07-01-Makefile.md
+++ b/_posts/2020-07-01-Makefile.md
@@ -1,12 +1,12 @@
 ---
-layout:		post					# 使用的布局
-title:		Makefile				# 标题
-subtitle:	Learning Notes of Makefile		# 副标题
-date:		2019-08-08				# 时间
-author:		Ripper-S				# 作者
-header-img:	img/book-coffee.jpeg			# 文章标题背景图
-catalog:	true					# 是否归档
-tags:							# 标签
+layout:		post						# 使用的布局
+title:		Makefile					# 标题
+subtitle:	Learning Notes of Makefile	# 副标题
+date:		2020-07-01					# 时间
+author:		Ripper-S					# 作者
+header-img:	img/book-coffee.jpeg		# 文章标题背景图
+catalog:	true						# 是否归档
+tags:									# 标签
     - Linux
 ---
 
@@ -22,18 +22,19 @@ tags:							# 标签
 ```
 a:a.o
 	gcc -o $@ $^
+//	gcc $^ -lpthread -o $@		多线程编译有点区别
 .c.o:
 	gcc -c $<
 clean:
 	rm -rf *.o
 ```
-$@：目标的完整名称
-$^：所有依赖的文件
-$<：第一个依赖的文件
+$@：目标的完整名称<br>
+$^：所有依赖的文件<br>
+$<：第一个依赖的文件<br>
 
 
 
-当然，常规写法中，我们也可以指定一些变量，并通过正则的手段，简化一些操作。
+当然，常规写法中，我们也可以指定一些变量，并通过正则的手段，简化一些操作。<br>
 我们可以将多个.c文件名保存在SRCS中，再定义另一个变量OBJS保存.o文件名。
 ```
 SRCS=fun1.c fun2.c main.c
@@ -45,7 +46,7 @@ CC			编译器类型
 CFLAGS		编译选项
 LDFLAGS		额外链接库
 EXEC/APP	应用程序名
-
+```
 
 Example:
 ```
