--- a/_posts/2020-07-01-Makefile.md
+++ b/_posts/2020-07-01-Makefile.md
@@ -15,6 +15,9 @@ tags:									# 标签
 今天学习了Makefile相关操作，记录一下自己的学习历程。<br>
 
 #	正文
+
+
+##	简写Makefile
 每次写了新的C代码，都要写一遍Makefile： <br>
 某可执行程序依赖于某.o文件，用gcc -o编译。某.o文件又依赖于某.c文件，通过gcc -c生成，每次都写比较麻烦。 <br>
 但是如果通过正则表达式简写Makefile，则可以只写一次，轻松应对大部分.c代码。<br>
@@ -33,7 +36,13 @@ $^：所有依赖的文件<br>
 $<：第一个依赖的文件<br>
 
 
+##	gcc -g -c -o 参数
+1、-g 可执行程序包含调试信息，为了gdb调试使用<br>
+2、-c 只编译不链接，产生.o文件，即obj文件文件，不产生执行文件<br>
+3、-o output_filename，指定输出文件名，否则将默认生成a.out<br>
 
+
+##	Makefile的预定义变量
 当然，常规写法中，我们也可以指定一些变量，并通过正则的手段，简化一些操作。<br>
 我们可以将多个.c文件名保存在SRCS中，再定义另一个变量OBJS保存.o文件名。
 ```
