--- a/_posts/2019-02-02-minicom.md
+++ b/_posts/2019-02-02-minicom.md
@@ -1,12 +1,12 @@
 ---
-layout:		post					# 使用的布局
-title:		Minicom					# 标题
-subtitle:	Learning Notes of minicom parameter	# 副标题
-date:		2019-08-10				# 时间
-author:		Ripper-S				# 作者
-header-img:	img/book-coffee.jpeg			# 文章标题背景图
-catalog:	true					# 是否归档
-tags:							# 标签
+layout:		post						# 使用的布局
+title:		Minicom						# 标题
+subtitle:	Learning Notes of minicom	# 副标题
+date:		2019-02-02					# 时间
+author:		Ripper-S					# 作者
+header-img:	img/book-coffee.jpeg		# 文章标题背景图
+catalog:	true						# 是否归档
+tags:									# 标签
     - Linux
 ---
 
